learnt more about photo uploading

--- a/employeeform.html
+++ b/employeeform.html
@@ -39,7 +39,7 @@
                 <input type="checkbox" name="favoriteColor[]" value="Green"> Green<br><br> 
 
                 <label for="photo">Upload Photo:</label> 
-                <input type="file" id="photo" name="photo" accept="image/*" required><br><br> 
+                <input type="file" id="photo" name="photo" accept="image/*"><br><br> 
 
                 <label for="country">Country:</label> 
                 <select id="country" name="country" required> 
